@@ -39,6 +39,8 @@ securityrec	edit_nsec(securityrec, char *);
 char		*get_secstr(securityrec);
 void		show_int(int, int, int);
 int 		edit_int(int, int, int, char *);
+void		show_uint(int, int, unsigned int);
+unsigned int	edit_uint(int, int, unsigned int, char *);
 int		edit_int_range(int, int, int, int, int, char *);
 void		show_ushort(int, int, unsigned short);
 unsigned short	edit_ushort(int, int, unsigned short, char *);
@@ -96,6 +98,7 @@ int		edit_charset(int, int, int);
 #define E_JAM(y,x,l,str,help) strcpy(str, edit_jam(y,x,l,str,(char *)help)); break;
 #define E_BOOL(y,x,bool,help) bool = edit_bool(y,x,bool,(char *)help); break;
 #define E_INT(y,x,value,help) value = edit_int(y,x,value,(char *)help); break;
+#define E_UINT(y,x,value,help) value = edit_uint(y,x,value,(char *)help); break;
 #define E_IRC(y,x,value,min,max,help) value = edit_int_range(y,x,value,min,max,(char *)help); break;
 #define E_LOGL(grade,txt,af)  grade = edit_logl(grade,(char *)txt); af(); break;
 #define S_COL(y,x,name,fg,bg) set_color(fg,bg); mbse_mvprintw(y,x,name);
